[package]
name = "json_validate_rs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "fast, plug and play firestore lib"
homepage = "https://github.com/gzbakku/json_validate_rs"
repository = "https://github.com/gzbakku/json_validate_rs"
readme = "README.md"
keywords = ["firestore","easy"]
categories = ["database"]
license="MIT"

[dependencies]
json = "0.12.4"
regex = "1.8.1"
md5 = "0.7.0"
