[package]
name = "json_validate_rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "validate json schema"
homepage = "https://github.com/gzbakku/json_validate_rs"
repository = "https://github.com/gzbakku/json_validate_rs"
readme = "README.md"
keywords = ["firestore","easy","json","validate"]
categories = ["database","data-structures"]
license="MIT"

[dependencies]
json = "0.12.4"
regex = "1.8.1"
md5 = "0.7.0"
flate2 = "1.0.30"
base64 = "0.21.5"

# flate2 = {path="../flate2-rs"}
